--- a/home.html
+++ b/home.html
@@ -87,10 +87,10 @@
   </head>
   <body>
     <!-- Your website content goes here -->
-    <img width="45%" src="/Users/mikeychapman/Downloads/portfoliobg.jpg" alt="Paris" class="center">
+    <img width="45%" src="" alt="" class="center">
     <a class="top-left corner-text" href="#">mikey chapman.</a>
-    <a class="corner-text top-right" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/projectspage.html">work.</a>
-    <a class="corner-text bottom-left" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/aboutpage.html">about.</a>
-    <a class="corner-text bottom-right" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/contactpage.html">contact.</a>
+    <a class="corner-text top-right" href="/portfolio/work.html">work.</a>
+    <a class="corner-text bottom-left" href="/portfolio/about.html">about.</a>
+    <a class="corner-text bottom-right" href="/portfolio/contact.html">contact.</a>
   </body>
 </html>
