--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
 	  <a class="text-element">@mikeyjc_</a>
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/landingpage.html"> home.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/projectspage.html"> work.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/aboutpage.html"> about.</a>
+		<a class="text-element2" href="/portfolio/home.html"> home.</a>
+		<a class="text-element2" href="/portfolio/work.html"> work.</a>
+		<a class="text-element2" href="/portfolio/about.html"> about.</a>
 		<a class="text-element3" href="#"> contact.</a>
 	</div>  
   </body>
