--- a/about.html
+++ b/about.html
@@ -118,10 +118,10 @@
 
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/landingpage.html"> home.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/projectspage.html"> work.</a>
+		<a class="text-element2" href="/portfolio/home.html"> home.</a>
+		<a class="text-element2" href="/portfolio/work.html"> work.</a>
 		<a class="text-element3" href="#"> about.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/contactpage.html"> contact.</a>
+		<a class="text-element2" href="/portfolio/contact.html"> contact.</a>
 	</div>  
   </body>
 
