--- a/work.html
+++ b/work.html
@@ -92,10 +92,10 @@
       <a class="text-element" href="#">project IV.</a>
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/landingpage.html"> home.</a>
+		<a class="text-element2" href="/portfolio/home.html"> home.</a>
 		<a class="text-element3" href="#"> work.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/aboutpage.html"> about.</a>
-		<a class="text-element2" href="/Users/mikeychapman/Desktop/MikeyChapmanPortfolioPages/contactpage.html"> contact.</a>
+		<a class="text-element2" href="/portfolio/about.html"> about.</a>
+		<a class="text-element2" href="/portfolio/contact.html"> contact.</a>
 	</div>  
   </body>
 
