--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 		margin-bottom: 50px;
 		margin-right: 25px;
 		text-decoration: line-through;
-		color: black;
+		color: #000000;
 		opacity: 40%;
 	}
       .text-element4 {
@@ -64,7 +64,7 @@
         user-select: none;
         margin: 1px;
 		text-decoration: none;
-		color: black;
+		color: #000000;
 		opacity: 40%;
 		align-content: center;
 	}
