--- a/home.html
+++ b/home.html
@@ -88,8 +88,8 @@
   <body>
     <!-- Your website content goes here -->
     <a class="top-left corner-text" href="#">mikey chapman.</a>
-    <a class="corner-text top-right" href="work.html">work.</a>
-    <a class="corner-text bottom-left" href="about.html">about.</a>
-    <a class="corner-text bottom-right" href="contact.html">contact.</a>
+    <a class="corner-text top-right" href="/work.html">work.</a>
+    <a class="corner-text bottom-left" href="/about.html">about.</a>
+    <a class="corner-text bottom-right" href="/contact.html">contact.</a>
   </body>
 </html>
