--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
         user-select: none;
         margin: 50px;
 		text-decoration: none;
-		color: black;  
+		color: #000000;  
       }
       .text-element2 {
         font-family: "Helvetica Neue";
@@ -35,7 +35,7 @@
 		margin-bottom: 50px;
 		margin-right: 25px;
 		text-decoration: none;
-		color: black;
+		color: #000000;
 		opacity: 40%;
       }
       .text-element3 {
@@ -50,7 +50,7 @@
 		margin-bottom: 50px;
 		margin-right: 25px;
 		text-decoration: line-through;
-		color: black;
+		color: #000000;
 		opacity: 40%;
 	}
       .back-button {
@@ -92,10 +92,10 @@
       <a class="text-element" href="#">project IV.</a>
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="home.html"> home.</a>
+		<a class="text-element2" href="/potfolio/home.html"> home.</a>
 		<a class="text-element3" href="#"> work.</a>
-		<a class="text-element2" href="about.html"> about.</a>
-		<a class="text-element2" href="contact.html"> contact.</a>
+		<a class="text-element2" href="/portfolio/about.html"> about.</a>
+		<a class="text-element2" href="/portfolio/contact.html"> contact.</a>
 	</div>  
   </body>
 
