--- a/work.html
+++ b/work.html
@@ -92,10 +92,10 @@
       <a class="text-element" href="#">project IV.</a>
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="/potfolio/home.html"> home.</a>
+		<a class="text-element2" href="/home.html"> home.</a>
 		<a class="text-element3" href="#"> work.</a>
-		<a class="text-element2" href="/portfolio/about.html"> about.</a>
-		<a class="text-element2" href="/portfolio/contact.html"> contact.</a>
+		<a class="text-element2" href="/about.html"> about.</a>
+		<a class="text-element2" href="/contact.html"> contact.</a>
 	</div>  
   </body>
 
