--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
 	  <a class="text-element">@mikeyjc_</a>
     </div>
 	<div class="nav-bar">
-		<a class="text-element2" href="home.html"> home.</a>
-		<a class="text-element2" href="work.html"> work.</a>
-		<a class="text-element2" href="about.html"> about.</a>
+		<a class="text-element2" href="/home.html"> home.</a>
+		<a class="text-element2" href="/work.html"> work.</a>
+		<a class="text-element2" href="/about.html"> about.</a>
 		<a class="text-element3" href="#"> contact.</a>
 	</div>  
   </body>
