--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
       } 
       @media (max-width: 767px) {
         .corner-text {
-          position: relative;
+          position: fixed;
           text-align: center;
           margin: 0 auto;
           top: 0;
@@ -83,6 +83,11 @@
           right: 0;
           bottom: 0;
         }
+	.nav-bar  a {
+    font-size: 14px;
+  }
+}
+	  
 		.center {
   display: block;
   margin-left: auto;
