--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,14 @@
         cursor: pointer;
         user-select: none;
       }
-
+      .nav-bar {
+        display: flex;
+        justify-content: center;
+        padding: 0px;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+      } 
 	  .textbox {
 		position: absolute;
 		display: block;
@@ -92,6 +99,9 @@
           flex-direction: column;
         }
         .text-element {
+          display: block;
+		  }
+		.text-element4 {
           display: block;
         }
       }
@@ -106,8 +116,7 @@
 	  <a class="text-element">@mikeyjc_</a>
 	  <a class="text-element4">instagram.</a>
 	  <a class="text-element">@mikeyjc_</a>
-    </div>
- 
+    </div>  
   </body>
 
 </html>
