--- a/home.html
+++ b/home.html
@@ -15,6 +15,10 @@
         align-items: center;
         justify-content: center;
         overflow: hidden;
+		background-image: url("https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WIP.jpg");
+		 background-repeat: no-repeat;
+		  background-position: center;
+		  background-size: 200px;
       }
       
       .corner-text {
