--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
   <body>
   <p>
     <!-- Your website content goes here -->
-    <a class="back-button" onClick="history.back()">&lt; back.</a> <a class="top-left corner-text textbox"><p align="center"> mikey chapman is a twenty two year old graphic
+    <a class="back-button" onClick="history.back()">&lt; back.</a> <a class="top-left corner-text textbox"><p align="center"> mikey chapman is a twenty three year old graphic
       designer from watford, england.</a>
   <p align="center"><a class="top-left corner-text textbox" align="center">
 	he taught himself how to use photoshop
