--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	<div class="container">
 		<div class="verticalalign">
 			<p class="largetext">mikey chapman.</p>
-			<p class="largetext"><a class="largetext" href="/portfolio/projects.html">projects.</a></p>
-			<p class="largetext"><a class="largetext" href="/portfolio/about.html">about.</a></p>
-			<p class="largetext"><a class="largetext" href="/portfolio/contact.html">contact.</a></p>
+			<p class="largetext"><a class="largetext" href="/projects.html">projects.</a></p>
+			<p class="largetext"><a class="largetext" href="/about.html">about.</a></p>
+			<p class="largetext"><a class="largetext" href="/contact.html">contact.</a></p>
 		</div>
 	</div>
 </body>
