--- a/projects.html
+++ b/projects.html
@@ -56,13 +56,13 @@
 		<a class="back-button" onclick="history.back()">&lt; back.</a>
 		<div class="verticalalign">
 			<p><a class="smalltext">project one.</a><br>
-			<a class="largetext" href="/portfolio/watfordfc.html">watford fc.</a></p>
+			<a class="largetext" href="/watfordfc.html">watford fc.</a></p>
 			<p><a class="smalltext">project two.</a><br>
-			<a class="largetext" href="/portfolio/afcstaustell.html">afc st. austell.</a></p>
+			<a class="largetext" href="/afcstaustell.html">afc st. austell.</a></p>
 			<p><a class="smalltext">project three.</a><br>
-			<a class="largetext" href="/portfolio/footb-all.html">footb-all.</a></p>
+			<a class="largetext" href="/footb-all.html">footb-all.</a></p>
 			<p><a class="smalltext">project four.</a><br>
-			<a class="largetext" href="/portfolio/orbitproperty.html">orbit property.</a></p>
+			<a class="largetext" href="/orbitproperty.html">orbit property.</a></p>
 		</div>
 	</div>
 </body>
