--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>mikey chapman. - about.</title>
+<title>about.</title>
+<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 </head>
 
 <style>
