--- a/watfordfc.html
+++ b/watfordfc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>watford fc.</title>
+<title>mikey chapman. - projects.</title>
 <link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 </head>
 
@@ -74,7 +74,9 @@ I wanted to redesign the Hart so that it was more obvious that it was a Hart and
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordKits.png" width="750">
 		  <p class="smalltext"> Mockup of new club crest on kits.<br></p>
 		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAssets.png" width="750">
-		  <p class="smalltext"> Mockup of new club crest on tickets, a scarf &amp; kits<br></p>
+		  <p class="smalltext"> Mockup of new club crest on tickets, a scarf &amp; kits.<br></p>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAlternate.png" width="750">
+		  <p class="smalltext"> Alternate crest design using a circle instead of the classic shield.&nbsp;<br></p>
 		</div>
 	</div>
 	<div class="footer"></div>
