--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		letter-spacing: 2px;
 		color: #999999;
 		text-align: center;
+		text-decoration: none;
 	}
 	
 	.largetext {
@@ -41,10 +42,9 @@
 <body>
 	<div class="container">
 		<div class="verticalalign">
-			<p class="largetext">mikey chapman.</p>
-			<p class="largetext"><a class="largetext" href="/projects.html">projects.</a></p>
-			<p class="largetext"><a class="largetext" href="/about.html">about.</a></p>
-			<p class="largetext"><a class="largetext" href="/contact.html">contact.</a></p>
+			<p class="largetext">mikey chapman.</p><br><br>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/Stadium.png" width="650px">
+			<p><br><br><a class="smalltext" href="/home.html">[click here to enter]</a></p>
 		</div>
 	</div>
 </body>
