--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>projects.</title>
-<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+<title>mikey chapman. - projects.</title>
 </head>
 
 <style>
@@ -52,18 +51,20 @@
 
 </style>
 	
+<map name="selectseat">
+  	<area shape="rect" coords="109,70,142,107" alt="watford fc." href="/watfordfc.html">
+	<area shape="rect" coords="275,159,307,195" alt="about." href="/afcstaustell.html">
+</map>
+
+	
 <body>
 	<div class="container">
 		<a class="back-button" onclick="history.back()">&lt; back.</a>
 		<div class="verticalalign">
-			<p><a class="smalltext">project one.</a><br>
-			<a class="largetext" href="/watfordfc.html">watford fc.</a></p>
-			<p><a class="smalltext">project two.</a><br>
-			<a class="largetext" href="/afcstaustell.html">afc st. austell.</a></p>
-			<p><a class="smalltext">project three.</a><br>
-			<a class="largetext" href="/footb-all.html">footb-all.</a></p>
-			<p><a class="smalltext">project four.</a><br>
-			<a class="largetext" href="/orbitproperty.html">orbit property.</a></p>
+			<br><p class="largetext">select project.</p>
+			<br>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/ProjectsSelection.png" width="500px" usemap="#selectseat">
+			<p class="smalltext">C2: Watford FC.</p><p class="smalltext">G4: AFC St. Austell</p>
 		</div>
 	</div>
 </body>
