--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 </style>
 
 <map name="seating">
-  	<area shape="rect" coords="408,121,498,191" alt="work." href="/work.html">
+  	<area shape="rect" coords="408,121,498,191" alt="work." href="/projects.html">
 	<area shape="rect" coords="408,234,498,304" alt="about." href="/about.html">
 	<area shape="rect" coords="276,306,347,397" alt="contact." href="/contact.html">
 </map>
