--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <title>mikey chapman.</title>
 <link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
+	
 </head>
 
 <style>
