--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <style>
 	
+	body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+	
 	.container{
         margin: 0;
         display: flex;
