--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 		}
 
 		h1, p {
-			font-weight: 300; /* light font weight */
+			font-weight: 100; /* light font weight */
+			letter-spacing: 2px;
 			color: #333; /* dark grey color */
 		}
 
 		h1 {
-			font-size: 2em;
+			font-size: 1.5em;
 		}
 
 		p {
-			font-size: 1.2em;
+			font-size: 1em;
 			line-height: 1.5;
 		}
 
@@ -44,7 +45,7 @@
 		}
 		
 		img {
-			max-width: 600px;
+			max-width: 500px;
 			height: auto;
 		}
 	</style>
