--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 		h1 {
 			font-size: 1.5em;
+			text-align: center;
 		}
 
 		p {
 			font-size: 1em;
 			line-height: 1.5;
+			text-align: center;
 		}
 
 		h1 strong, p strong {
@@ -38,6 +40,7 @@
 			align-items: center;
 			justify-content: center;
 			height: 100vh;
+			padding: 0 20px; /* add padding to the sides */
 		}
 		
 		.centered-text {
@@ -45,12 +48,21 @@
 		}
 		
 		img {
-			max-width: 500px;
+			max-width: 100%;
 			height: auto;
+		}
+		
+		@media screen and (min-width: 768px) {
+			h1 {
+				font-size: 2em;
+			}
+			
+			p {
+				font-size: 1.2em;
+			}
 		}
 	</style>
 </head>
-
 	
 <body>
 	<div class="container">
@@ -62,7 +74,5 @@
 			<a href="/home.html"><p>[click here to enter]</p></a>
 		</div>
 	</div>
-
-
 </body>
 </html>
