--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Webpage</title>
+	<title>Mikey Chapman</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
