--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Mikey Chapman</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -60,7 +65,7 @@
 				font-size: 1em;
 			}
 			img {
-			max-width: 90%;
+			max-width: 75%;
 			height: auto;
 		}
 		}
