--- a/home.html
+++ b/home.html
@@ -1,54 +1,89 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>mikey chapman.</title>
-<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	<title>Mikey Chapman - Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
+	<style>
+		body {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		h1, p {
+			font-weight: 100; /* light font weight */
+			letter-spacing: 2px;
+			color: #333; /* dark grey color */
+		}
+
+		h1 {
+			font-size: 1.5em;
+			text-align: center;
+		}
+
+		p {
+			font-size: 1em;
+			line-height: 1.5;
+			text-align: center;
+		}
+
+		h1 strong, p strong {
+			font-weight: 500; /* regular font weight */
+			color: #000; /* black color */
+		}
+		
+		a {
+			text-decoration: none;
+		}
+
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+		}
+		
+		.centered-text {
+			text-align: center;
+		}
+		
+		img {
+			max-width: 600px;
+			height: auto;
+		}
+		
+		@media screen and (max-width: 768px) {
+			h1 {
+				font-size: 1.2em;
+			}
+			
+			p {
+				font-size: 1em;
+			}
+			img {
+			max-width: 85%;
+			height: auto;
+		}
+
+		}
+	</style>
 </head>
 
-<style>
-	
-	
-	.container{
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-		text-align: center;
-	}
-	
-	.smalltext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 15px;
-		letter-spacing: 2px;
-		color: #999999;
-		text-align: center;
-	}
-	
-	.largetext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 25px;
-		letter-spacing: 2px;
-		color: #000000;
-		text-align: center;
-		text-decoration: none;
-	}
-
-</style>
-
 <map name="seating">
-  	<area shape="rect" coords="408,121,498,191" alt="work." href="/projects.html">
+	<area shape="rect" coords="408,121,498,191" alt="work." href="/work.html">
 	<area shape="rect" coords="408,234,498,304" alt="about." href="/about.html">
 	<area shape="rect" coords="276,306,347,397" alt="contact." href="/contact.html">
+	<area shape="rect" coords="2,80,92,135" alt="away days." href="/awaydays.html">
 </map>
 	
 <body>
 	<div class="container">
-		<div class="verticalalign">
-<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SeatSelect3.png" width="500px" height="398" usemap="#seating" alt="seating page select">
+		<div class="centered-text">
+<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SeatSelect3.png" width="500px" height="398" usemap="#seating" alt="seating selection page">
 		</div>
 	</div>
 </body>
