--- a/projects.html
+++ b/projects.html
@@ -1,71 +1,111 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>work.</title>
+	<title>Contact</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
+	<style>
+		body {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		h2, h1, p {
+			font-weight: 100; /* light font weight */
+			letter-spacing: 2px;
+			color: #333; /* dark grey color */
+		}
+
+		h1 {
+			font-size: 1.5em;
+			text-align: center;
+		}
+		
+		h2 {
+			font-size: 1em;
+			text-align: left;
+			margin-top: 50px;
+			margin-left: 50px;
+			margin-bottom: -50px;
+			cursor: pointer;
+		}
+
+		p {
+			font-size: 0.8em;
+			line-height: 0.0;
+			text-align: center;
+		}
+
+		h1 strong, p strong {
+			font-weight: 500; /* regular font weight */
+			color: #000; /* black color */
+		}
+		
+		a {
+			text-decoration: none;
+		}
+
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+		}
+		
+		.centered-text {
+			text-align: center;
+		}
+		
+		img {
+			max-width: 500px;
+			height: auto;
+		}
+		
+		.back-button {
+			text-align: left;
+		}
+		
+		@media screen and (max-width: 768px) {
+			h1 {
+				font-size: 1.2em;
+			}
+			
+			p {
+				font-size: 0.7em;
+			}
+			h2 {
+				font-size: 1em;
+				text-align: left;
+				margin-top: 50px;
+				margin-left: 20px;
+				margin-bottom: -50px;
+			}
+			img {
+				max-width: 75%;
+				height: auto;
+			}
+		}
+	</style>
 </head>
-
-<style>
-	
-	.container{
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-		text-align: center;
-	}
-	
-	.smalltext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 15px;
-		letter-spacing: 2px;
-		color: #999999;
-		text-align: center;
-	}
-	
-	.largetext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 25px;
-		letter-spacing: 2px;
-		color: #000000;
-		text-align: center;
-		text-decoration: none;
-	}
-	
-      .back-button {
-        position: absolute;
-        top: 50px;
-        left: 50px;
-        font-family: "Helvetica Neue";
-        font-size: 18px;
-        font-weight: 100;
-        letter-spacing: 2px;
-        text-align: center;
-        user-select: none;
-		color: #999999;
-		cursor: pointer;
-      }
-
-</style>
-	
-<map name="selectseat">
-  	<area shape="rect" coords="109,70,142,107" alt="watford fc." href="/watfordfc.html">
-	<area shape="rect" coords="275,159,307,195" alt="about." href="/afcstaustell.html">
-</map>
-
 	
 <body>
+	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
 	<div class="container">
-		<a class="back-button" onclick="history.back()">&lt; back.</a>
-		<div class="verticalalign">
-			<br><p class="largetext">select project.</p>
+		<div class="centered-text">
+		  	<a href="/watfordfc.html">
+				<p>Project 1</p>
+				<h1>Watford FC Rebrand</h1>
+		  	</a>
 			<br>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/ProjectsSelection.png" width="500px" usemap="#selectseat">
-			<p class="smalltext">C2: Watford FC.</p><p class="smalltext">G4: AFC St. Austell</p>
-		</div>
+			<a href="/afcstaustell.html">
+				<p>Project 2</p>
+				<h1>AFC St. Austell Rebrand</h1>
+		  	</a>
+	  	</div>
 	</div>
 </body>
 </html>
