--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 			
 			<h1>He started to teach himself how to use the Adobe Creative Suite at the age of 13 before deciding to persue it further at Amersham College.</h1>
 			
-			<h1>he graduated from Amersham College in May 2019 with a Level 3 Extended Diploma in Graphic Design before continuing his studies at the University of Hertfordshire in September 2019. He graduated from university with an Upper Second Class BA (Hons) on 22nd July 2022.</h1>
+			<h1>He graduated from Amersham College in May 2019 with a Level 3 Extended Diploma in Graphic Design before continuing his studies at the University of Hertfordshire in September 2019. He graduated from university with an Upper Second Class BA (Hons) on 22nd July 2022.</h1>
 			
 			<h1>As an avid Watford FC fan, he travels round the country to watch the Hornets play and aspires to complete the 92.</h1>
 			
