--- a/watfordfc.html
+++ b/watfordfc.html
@@ -1,84 +1,128 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>watford fc.</title>
-<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	<title>Watford FC Rebrand</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
+	<style>
+		body {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		h2, h1, p {
+			font-weight: 100; /* light font weight */
+			letter-spacing: 2px;
+			color: #333; /* dark grey color */
+		}
+
+		h1 {
+			font-size: 1.5em;
+			text-align: center;
+		}
+		
+		h2 {
+			font-size: 1em;
+			text-align: left;
+			margin-top: 50px;
+			margin-left: 50px;
+			margin-bottom: -50px;
+			cursor: pointer;
+		}
+
+		p {
+			font-size: 1em;
+			line-height: 1.5;
+			text-align: center;
+		}
+
+		h1 strong, p strong {
+			font-weight: 500; /* regular font weight */
+			color: #000; /* black color */
+		}
+		
+		a {
+			text-decoration: none;
+		}
+
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			height: 100vh;
+			margin-top: 100px;
+		}
+		
+		.centered-text {
+			text-align: center;
+			max-width: 65%;
+		}
+		
+		img {
+			max-width: 750px;
+			height: auto;
+		}
+		
+		.back-button {
+			text-align: left;
+		}
+		
+		@media screen and (max-width: 768px) {
+			h1 {
+				font-size: 1.2em;
+			}
+			
+			p {
+				font-size: 1em;
+			}
+			h2 {
+				font-size: 1em;
+				text-align: left;
+				margin-top: 50px;
+				margin-left: 20px;
+				margin-bottom: -20px;
+			}
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+			.centered-text {
+				text-align: center;
+				max-width: 80%;
+			}
+			.container {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				height: 100vh;
+				margin-top: 50px;
+			}
+		}
+	</style>
 </head>
-
-<style>
-	
-	.container{
-        margin: 0;
-        display: flex;
-        justify-content: center;
-		text-align: center;
-		margin-top: 150px;
-	}
-	
-	.smalltext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 15px;
-		letter-spacing: 2px;
-		color: #999999;
-		text-align: center;
-		max-width: 750px;
-		margin-bottom: 30px;
-		padding: 5px;
-	}
-	
-	.largetext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 25px;
-		letter-spacing: 2px;
-		color: #000000;
-		text-align: center;
-		text-decoration: none;
-	}
-	
-      .back-button {
-        position: absolute;
-        top: 50px;
-        left: 50px;
-        font-family: "Helvetica Neue";
-        font-size: 18px;
-        font-weight: 100;
-        letter-spacing: 2px;
-        text-align: center;
-        user-select: none;
-		color: #999999;
-		cursor: pointer;
-      }
-	
-	.footer {
-		height: 100px;
-		width: 1px;
-		position: absolute;
-		align-content: center;
-	}
-
-</style>
 	
 <body>
+	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
 	<div class="container">
-		<a class="back-button" onclick="history.back()">&lt; back.</a>
-		<div class="verticalalign">
-			<p class="largetext"> watford fc.</p>
-			<p class="smalltext">For as long as I can remember, rival fans and even some Watford fans have asked the age-old question: "Why is there a moose on the Watford Badge, even though they/we are referred to as 'The Hornets'?".<br><br>
-'The Hornets' comes from the colour of Watford's home kit, which regularly feature black and yellow, but the so-called 'moose' on the badge is meant to be a Hart, a male deer which are commonly found in the Hertfordshire area and feature on the Watford coat of arms. I've wanted to change this in some way or another but never been sure how to until a few weeks ago (written on 5th June 2022).<br><br>
-I wanted to redesign the Hart so that it was more obvious that it was a Hart and not a Moose as many people think it is.</p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordFCHeader1.png" width="750">
-			<p class="smalltext"> New club crest.&nbsp;<br></p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordKits.png" width="750">
-		  <p class="smalltext"> Mockup of new club crest on kits.<br></p>
-		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAssets.png" width="750">
-		  <p class="smalltext"> Mockup of new club crest on tickets, a scarf &amp; kits.<br></p>
-		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAlternate.png" width="750">
-		  <p class="smalltext"> Alternate crest design using a circle instead of the classic shield.&nbsp;<br></p>
+		<div class="centered-text">
+			<h1>Watford FC Rebrand</h1>
+			<p>For as long as I can remember, rival fans and even some Watford fans have asked the age-old question: "Why is there a moose on the Watford Badge, even though they/we are referred to as 'The Hornets'?".<br><br>
+			'The Hornets' comes from the colour of Watford's home kit, which regularly feature black and yellow, but the so-called 'moose' on the badge is meant to be a Hart, a male deer which are commonly found in the Hertfordshire area and feature on the Watford coat of arms. I've wanted to change this in some way or another but never been sure how to until a few weeks ago (written on 5th June 2022).<br><br>
+			I wanted to redesign the Hart so that it was more obvious that it was a Hart and not a Moose as many people think it is.</p><br>
 		</div>
-	</div>
-	<div class="footer"></div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordFCHeader1.png" alt="Logo">
+			<p> New club crest.&nbsp;<br></p><br>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordKits.png" alt="Kits">
+		  	<p> Mockup of new club crest on kits.<br></p><br>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAssets.png" alt="Assets">
+		  	<p> Mockup of new club crest on tickets, a scarf &amp; kits.<br></p><br>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAlternate.png" alt="Alternate Logo">
+		  	<p style="padding-bottom: 100px"> Alternate crest design using a circle instead of the classic shield.</p>
+		</div>
+
 </body>
+
 </html>
