--- a/afcstaustell.html
+++ b/afcstaustell.html
@@ -1,83 +1,126 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>mikey chapman. - projects.</title>
-<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	<title>Watford FC Rebrand</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
+	
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
+	<style>
+		body {
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		h2, h1, p {
+			font-weight: 100; /* light font weight */
+			letter-spacing: 2px;
+			color: #333; /* dark grey color */
+		}
+
+		h1 {
+			font-size: 1.5em;
+			text-align: center;
+		}
+		
+		h2 {
+			font-size: 1em;
+			text-align: left;
+			margin-top: 50px;
+			margin-left: 50px;
+			margin-bottom: -50px;
+			cursor: pointer;
+		}
+
+		p {
+			font-size: 1em;
+			line-height: 1.5;
+			text-align: center;
+		}
+
+		h1 strong, p strong {
+			font-weight: 500; /* regular font weight */
+			color: #000; /* black color */
+		}
+		
+		a {
+			text-decoration: none;
+		}
+
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			height: 100vh;
+			margin-top: 100px;
+		}
+		
+		.centered-text {
+			text-align: center;
+			max-width: 65%;
+		}
+		
+		img {
+			max-width: 750px;
+			height: auto;
+		}
+		
+		.back-button {
+			text-align: left;
+		}
+		
+		@media screen and (max-width: 768px) {
+			h1 {
+				font-size: 1.2em;
+			}
+			
+			p {
+				font-size: 1em;
+			}
+			h2 {
+				font-size: 1em;
+				text-align: left;
+				margin-top: 50px;
+				margin-left: 20px;
+				margin-bottom: -20px;
+			}
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+			.centered-text {
+				text-align: center;
+				max-width: 80%;
+			}
+			.container {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				height: 100vh;
+				margin-top: 50px;
+			}
+		}
+	</style>
 </head>
-
-<style>
-	
-	.container{
-        margin: 0;
-        display: flex;
-        justify-content: center;
-		text-align: center;
-		margin-top: 150px;
-	}
-	
-	.smalltext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 15px;
-		letter-spacing: 2px;
-		color: #999999;
-		text-align: center;
-		max-width: 750px;
-		margin-bottom: 30px;
-		padding: 5px;
-	}
-	
-	.largetext {
-		font-family: helvetica neue;
-		font-weight: 100;
-		font-size: 25px;
-		letter-spacing: 2px;
-		color: #000000;
-		text-align: center;
-		text-decoration: none;
-	}
-	
-      .back-button {
-        position: absolute;
-        top: 50px;
-        left: 50px;
-        font-family: "Helvetica Neue";
-        font-size: 18px;
-        font-weight: 100;
-        letter-spacing: 2px;
-        text-align: center;
-        user-select: none;
-		color: #999999;
-		cursor: pointer;
-      }
-
-	.footer {
-		height: 100px;
-		width: 1px;
-		position: absolute;
-		align-content: center;
-	}
-
-</style>
 	
 <body>
+	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
 	<div class="container">
-		<a class="back-button" onclick="history.back()">&lt; back.</a>
-		<div class="verticalalign">
-			<p class="largetext"> afc st. austell.</p>
-			<p class="smalltext">One of my best mates is from St. Austell and over the Christmas period of 2021 &amp; 2022 I had the idea of rebranding the local football club, AFC St. Austell.</p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellSmall1.png" width="750">
-			<p class="smalltext"> New club crest.</p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellSmall2.png" width="750">
-			<p class="smalltext"> Kit mockups with the new club crest.</p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustell_Small3.png" width="750">
-			<p class="smalltext"> Mockup of matchday programme.</p>
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellLarge.png" width="750">
-			<p class="smalltext"> Paper ticket, iOS ticket &amp; android ticket.</p>
-			<p class="smalltext"> <a href="https://www.dropbox.com/s/851f6eemcggge21/StAustellAFCRebrandDocumentation.pdf?dl=0">click here for the documentation.</a> </p>
+		<div class="centered-text">
+			<h1>AFC St. Austell Rebrand</h1>
+			<p>FOne of my best mates is from St. Austell and over the Christmas period of 2021 &amp; 2022 I had the idea of rebranding the local football club, AFC St. Austell.</p><br>
 		</div>
-	</div>
-	<div class="footer"></div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellSmall1.png" alt="Logo">
+			<p> New club crest.&nbsp;<br></p><br>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellSmall2.png" alt="Kits">
+		  	<p>Kit mockups with the new club crest.<br></p><br>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustell_Small3.png" alt="Preogramme">
+		  	<p> Mockup of matchday programme.<br></p><br>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellLarge.png" alt="Assets">
+		  	<p style="padding-bottom: 100px">Paper ticket, iOS ticket &amp; android ticket.</p>
+		</div>
+
 </body>
+
 </html>
