--- a/awaydays.html
+++ b/awaydays.html
@@ -159,7 +159,7 @@
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Southampton.png" alt="Southampton" width="333px"></div>
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/ManCity.png" alt="Man City" width="333px"></div>
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Palace.png" alt="Crystal Palace" width="333px"></div>
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Chelsea.png" alt="Chelsea" width="333px"></div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Chelsea.png" alt="Chelsea" width="333px" style="padding-bottom: 50px"></div>
 		</div>
 		
 		<div class="centered-text">
