--- a/awaydays.html
+++ b/awaydays.html
@@ -172,7 +172,11 @@
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Rotherham.png" alt="Rotherham" width="333px" title="Rotherham United 1-1 Watford"></div>
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Millwall.png" alt="Millwall" width="333px" title="Millwall 3-0 Watford"></div>
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/BristolCity.png" alt="Bristol" width="333px" title="Bristol City 0-0 Watford"></div>
-  			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Swansea.png" alt="Swansea" width="333px" title="Swansea City 4-0 Watford"></div>
+  			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Swansea.png" alt="Swansea" width="333px" title="Swansea City 4-0 Watford"></div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/ReadingFACup.png" alt="Reading FA Cup" width="333px" title="Reading 2-0 Watford"></div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Reading.png" alt="Reading" width="333px" title="Reading 2-2 Watford"></div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/SheffieldUtd.png" alt="Sheffield Utd" width="333px" title="Sheffield United 2-0 Watford"></div>
+			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/QPR.png" alt="QPR" width="333px" title="Queen's Park Rangers 1-0 Watford"></div>
 			
 		</div>
 		
