--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="Mikey Chapman" />
-  <meta property="og:description" content="Welcome to my portfolio!" />
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -98,12 +98,17 @@
 		<div class="centered-text">
 		  	<a href="/watfordfc.html">
 				<p>Project 1</p>
-				<h1>Watford FC 2022 Rebrand</h1>
+				<h1>Watford FC Rebrand</h1>
 		  	</a>
 			<br>
 			<a href="/afcstaustell.html">
 				<p>Project 2</p>
 				<h1>AFC St. Austell Rebrand</h1>
+		  	</a>
+			<br>
+			<a href="/watfordfc23-24kit.html">
+				<p>Project 3</p>
+				<h1>Watford FC 23/24 Kit Design</h1>
 		  	</a>
 	  	</div>
 	</div>
