--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 				<h1>AFC St. Austell Rebrand</h1>
 		  	</a>
 			<br>
-			<a href="/watfordfc23-24kit.html">
+			<a href="/23-24-watford-kit.html">
 				<p>Project 3</p>
 				<h1>Watford FC 23/24 Kit Design</h1>
 		  	</a>
