--- a/afcstaustell.html
+++ b/afcstaustell.html
@@ -109,7 +109,7 @@
 	<div class="container">
 		<div class="centered-text">
 			<h1>AFC St. Austell Rebrand</h1>
-			<p>FOne of my best mates is from St. Austell and over the Christmas period of 2021 &amp; 2022 I had the idea of rebranding the local football club, AFC St. Austell.</p><br>
+			<p>One of my best mates is from St. Austell and over the Christmas period of 2021 &amp; 2022 I had the idea of rebranding the local football club, AFC St. Austell.</p><br>
 		</div>
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AFCStAustell/StAustellSmall1.png" alt="Logo">
 			<p> New club crest.&nbsp;<br></p><br>
