--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
 			<br>
 			<a href="/23-24-watford-kit.html">
 				<p>Project 3</p>
-				<h1>Watford FC 23/24 Kit Desig</h1>
+				<h1>Watford FC 23/24 Kit Design</h1>
 		  	</a>
 	  	</div>
 	</div>
