--- a/sportcheck-ident.html
+++ b/sportcheck-ident.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
-  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
+  <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/sportcheckshareimage.png" />
   <meta property="og:title" content="Sport Check Design" />
   <meta property="og:description" content="Mikey Chapman" />
 	<style>
@@ -71,6 +71,11 @@
 			height: auto;
 		}
 		
+		video {
+			max-width: 750px;
+			height: auto;
+		}
+		
 		.back-button {
 			text-align: left;
 		}
@@ -94,6 +99,12 @@
 				max-width: 100%;
 				height: auto;
 			}
+			
+			video {
+				max-width: 100%;
+				height: auto;
+			}
+			
 			.centered-text {
 				text-align: center;
 				max-width: 80%;
@@ -140,8 +151,29 @@
 		<div class="centered-text">
 			<p>The process of creating the ident in AE.</p>
 			<br>
+		</div>
+		
+		<div>
+			<video width="750px" height="#" controls loop autoplay>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident.mp4" type=video/mp4>
+    		</video>
+		</div>
+		
+		<div class="centered-text">
+			<p>The basic ident, made in Adobe AE.</p>
+			<br>
+		</div>
+		
+		<div>
+			<video width="750px" height="#" controls loop autoplay>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Colour.mp4" type=video/mp4>
+    		</video>
+		</div>
+		
+		<div class="centered-text">
+			<p style="padding-bottom: 100px">The ident with brand colours.</p>
 			
-	  	</div>
+		</div>
 		
 	</div>
 		  	
