--- a/sportcheck-ident.html
+++ b/sportcheck-ident.html
@@ -154,7 +154,7 @@
 		</div>
 		
 		<div>
-			<video width="750px" height="#" controls loop autoplay>
+			<video width="750px" height="#" loop autoplay muted>
      	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident.mp4" type=video/mp4>
     		</video>
 		</div>
@@ -165,7 +165,7 @@
 		</div>
 		
 		<div>
-			<video width="750px" height="#" controls loop autoplay>
+			<video width="750px" height="#" loop autoplay muted>
      	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Colour.mp4" type=video/mp4>
     		</video>
 		</div>
