--- a/sportcheck-ident.html
+++ b/sportcheck-ident.html
@@ -154,7 +154,7 @@
 		</div>
 		
 		<div>
-			<video width="750px" height="#" loop autoplay muted>
+			<video width="750px" height="#" controls loop autoplay muted>
      	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident.mp4" type=video/mp4>
     		</video>
 		</div>
@@ -165,13 +165,38 @@
 		</div>
 		
 		<div>
-			<video width="750px" height="#" loop autoplay muted>
+			<video width="750px" height="#" controls loop autoplay muted>
      	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Colour.mp4" type=video/mp4>
     		</video>
 		</div>
 		
 		<div class="centered-text">
-			<p style="padding-bottom: 100px">The ident with brand colours.</p>
+			<p style="">The ident with brand colours.</p>
+			<br>
+			
+		</div>
+		
+		<!-- Image -->
+		
+		<div>
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/portfolioplaceholder.png" alt="">
+		</div>
+		
+		<!-- Image Caption -->
+		
+		<div class="centered-text">
+			<p>###</p>
+			<br>
+		</div>
+		
+		<div>
+			<video width="750px" height="#" controls>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Final.mp4" type=video/mp4>
+    		</video>
+		</div>
+		
+		<div class="centered-text">
+			<p style="padding-bottom: 100px">The final ident.</p>
 			
 		</div>
 		
