--- a/sportcheck-ident.html
+++ b/sportcheck-ident.html
@@ -155,7 +155,7 @@
 		
 		<div>
 			<video width="750px" height="#" controls loop autoplay muted>
-     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident.mp4" type=video/mp4>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident.mp4" type="video/mp4">
     		</video>
 		</div>
 		
@@ -166,7 +166,7 @@
 		
 		<div>
 			<video width="750px" height="#" controls loop autoplay muted>
-     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Colour.mp4" type=video/mp4>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Colour.mp4" type="video/mp4">
     		</video>
 		</div>
 		
@@ -179,19 +179,19 @@
 		<!-- Image -->
 		
 		<div>
-		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/portfolioplaceholder.png" alt="">
+		  <img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/identaudio.png" alt="">
 		</div>
 		
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>###</p>
+			<p>One thing that other idents in the sports industry have is a strong punchy sound in the background, and for this reason I tried to create my own sound that sounds similar to a football atmosphere. Audio isn't my strong point, admittedly, but I thought I'd expand my knoweledge on other fields by using garage band, along with football stadium sounds, to create backing audio.</p>
 			<br>
 		</div>
 		
 		<div>
 			<video width="750px" height="#" controls>
-     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Final.mp4" type=video/mp4>
+     	 	<source src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/SportCheck_Ident_Final.mp4" type="video/mp4">
     		</video>
 		</div>
 		
