--- a/sportcheck-ident.html
+++ b/sportcheck-ident.html
@@ -185,7 +185,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>One thing that other idents in the sports industry have is a strong punchy sound in the background, and for this reason I tried to create my own sound that sounds similar to a football atmosphere. Audio isn't my strong point, admittedly, but I thought I'd expand my knoweledge on other fields by using garage band, along with football stadium sounds, to create backing audio.</p>
+			<p>One thing that other idents in the sports industry have is a strong punchy sound in the background, and for this reason I tried to create my own sound that sounds similar to a football atmosphere. Audio is something you endeavour to expand my skills set in, so I opted to use garage band, along with football stadium sounds, to create backing audio.</p>
 			<br>
 		</div>
 		
