--- a/sportcheck.html
+++ b/sportcheck.html
@@ -150,7 +150,7 @@
 			
 			<div>
 			  	<h3>Channel Name</h3>
-			  	<p>After a long process of trying to come up with catchy names for this sports news channel, I eventually ended up with is 'SportCheck'.</p>
+			  	<p>After a long process of trying to come up with catchy names for this sports news channel, I eventually ended up with 'SportCheck'.</p>
 				<p>This is because I am guilty of always checking my phone at bad times to make sure that I am constantly aware of what the latest scores are and whats happening in the sport world. Needing to do this quickly it seems fitting to have the channel name sound similar to "spot check".</p><br>
 			</div>
 		
